Updated all trait descriptions and tweaked some recipes

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -34,7 +34,7 @@
 	//Fleetfooted is defined in Vanilla's Lang
 	"trait-fasting": "<font color=\"#84ff84\">• Fasting </font>",
 	//Weak is defined in Vanilla's Lang
-	"trait-imprecise": "<font color=\"#ff8484\">• Imprecise </font>",
+	"trait-inaccurate": "<font color=\"#ff8484\">• Inaccurate </font>",
 	"trait-artisan": "<font color=\"#84ff84\">• Artisan </font>",
 	"trait-frugalforming": "<font color=\"#84ff84\">• Frugal Forming </font>",
 	"trait-scavenger": "<font color=\"#84ff84\">• Scavenger </font>",
@@ -80,8 +80,6 @@
 	"trait-silvertongue": "<font color=\"#84ff84\">• Silver Tongue </font>",
 	"trait-prospector": "<font color=\"#84ff84\">• Prospector </font>",
 	"trait-shelteredstone": "<font color=\"#84ff84\">• Sheltered By Stone </font>",
-	"trait-toolkeeper": "<font color=\"#84ff84\">• Toolkeeper </font>",
-	"trait-prospectorpack": "<font color=\"#84ff84\">• Prospector Pack </font>",
 	"trait-agoraphobia": "<font color=\"#ff8484\">• Agoraphobia </font>",
 	"trait-miner": "<font color=\"#84ff84\">• Miner </font>",
 	"trait-mystic": "<font color=\"#84ff84\">• Mystic </font>",
@@ -94,7 +92,6 @@
 	"trait-recycler": "<font color=\"#84ff84\">• Recycler </font>",
 	"trait-burner": "<font color=\"#84ff84\">• Burner </font>",
 	//Clothier
-	//Mender are defined in Vanilla's Lang
 	"trait-tallowtanner": "<font color=\"#84ff84\">• Tallow Tanner </font>",
 	"trait-unlikelyharvest": "<font color=\"#84ff84\">• Unlikely Harvest </font>",
 	"trait-fibrousfolly": "<font color=\"#84ff84\">• Fibrous Folly </font>",
@@ -104,7 +101,7 @@
 	//Fleetfooted is defined in Vanilla's Lang
 	"traitname-fasting": "Fasting",
 	//Weak is defined in Vanilla's Lang
-	"traitname-imprecise": "Imprecise",
+	"traitname-inaccurate": "Inaccurate",
 	"traitname-artisan": "Artisan",
 	"traitname-frugalforming": "Frugal Forming",
 	"traitname-scavenger": "Scavenger",
@@ -121,7 +118,7 @@
 	"traitname-shelflifesavant": "Shelf-Life Savant",
 	"traitname-butcher": "Butcher",
 	"traitname-clumsy": "Clumsy",
-	"traitname-crafty": "Crafty",
+	"traitname-tinkerer": "Tinkerer",
 	"traitname-locustlover": "Locust Lover",
 	"traitname-technical": "Technical",
 	"traitname-stickyfingers": "Sticky Fingers",
@@ -150,8 +147,6 @@
 	"traitname-silvertongue": "Silver Tongue",
 	"traitname-prospector": "Prospector",
 	"traitname-shelteredstone": "Sheltered By Stone",
-	"traitname-toolkeeper": "Toolkeeper",
-	"traitname-prospectorpack": "Prospector Pack",
 	"traitname-agoraphobia": "Agoraphobia",
 	"traitname-miner": "Miner",
 	"traitname-mystic": "Mystic",
@@ -164,38 +159,30 @@
 	"traitname-recycler": "Recycler",
 	"traitname-burner": "Burner",
 	//Clothier
-	//Mender are defined in Vanilla's Lang
 	"traitname-tallowtanner": "Tallow Tanner",
 	"traitname-unlikelyharvest": "Unlikely Harvest",
 	"traitname-fibrousfolly": "Fibrous Folly",
 
-	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
-	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
-	"traitdesc-artisan": "Add description for Trait when it's finished pls!",
-	"traitdesc-culinary": "Add description for Trait when it's finished pls!",
-	"traitdesc-shelflifesavant": "Add description for Trait when it's finished pls!",
-	"traitdesc-crafty": "Add description for Trait when it's finished pls!",
-	"traitdesc-locustlover": "Add description for Trait when it's finished pls!",
-	"traitdesc-tenacious": "Add description for Trait when it's finished pls!",
-	"traitdesc-pioneer": "Add description for Trait when it's finished pls!",
-	"traitdesc-claustrophobic": "Add description for Trait when it's finished pls!",
-	"traitdesc-carpenter": "Add description for Trait when it's finished pls!",
-	"traitdesc-mason": "Add description for Trait when it's finished pls!",
-	"traitdesc-packmule": "Add description for Trait when it's finished pls!",
-	"traitdesc-specialstock": "Add description for Trait when it's finished pls!",
-	"traitdesc-silvertongue": "Add description for Trait when it's finished pls!",
-	"traitdesc-prospector": "Add description for Trait when it's finished pls!",
-	"traitdesc-shelteredstone": "Add description for Trait when it's finished pls!",
-	"traitdesc-toolkeeper": "Add description for Trait when it's finished pls!",
-	"traitdesc-prospectorpack": "Add description for Trait when it's finished pls!",
-	"traitdesc-agoraphobia": "Add description for Trait when it's finished pls!",
-	"traitdesc-mystic": "Add description for Trait when it's finished pls!",
-	"traitdesc-clairvoyance": "Add description for Trait when it's finished pls!",
-	"traitdesc-smith": "Add description for Trait when it's finished pls!",
-	"traitdesc-dragonskin": "Add description for Trait when it's finished pls!",
-	"traitdesc-recycler": "Add description for Trait when it's finished pls!",
-	"traitdesc-mender": "Add description for Trait when it's finished pls!",
-	"traitdesc-tallowtanner": "Add description for Trait when it's finished pls!",
+	"traitdesc-temporaltransmutation": "Has the ability to craft <a href=\"handbooksearch://temporal gear\">temporal gears</a>, <a href=\"handbooksearch://sulfur chunk\">sulfur</a>, <a href=\"handbooksearch://saltpeter\">saltpeter</a>, and <a href=\"handbooksearch://high fertility soil\">high fertility soil</a> via exclusive <a href=\"handbooksearch://temporal transmutation\">barrel</a> recipes",
+	"traitdesc-artisan": "Exclusive craftable <a href=\"handbooksearch://wallpaper\">wallpapers</a>, and can glaze <a href=\"handbooksearch://Raw storage vessel\">Raw storage vessels</a>, <a href=\"handbooksearch://Raw flowerpot\">Raw flowerpots</a>, and <a href=\"handbooksearch://Raw planter\">Raw planters</a>",
+	"traitdesc-culinary": "Exclusive craftable<a href=\"handbooksearch://vintage beef\">Vintage beef</a>, <a href=\"handbooksearch://cooking pot\">metal cooking pots</a>, and <a href=\"handbooksearch://frying pan\">metal frying pans</a>",
+	"traitdesc-shelflifesavant": "Exclusive craftable <a href=\"handbooksearch://rosin\">rosin</a> that doubles the longevity of food sealed in <a href=\"handbooksearch://fired crock\">crocks</a>",
+	"traitdesc-tinkerer": "Exclusive craftable <a href=\"handbooksearch://tuning spear\">device</a> to tame locusts, <a href=\"handbooksearch://metal parts\">metal parts</a>, better recipes for <a href=\"handbooksearch://chute\">chutes</a>, <a href=\"handbooksearch://archimedes\">archimedes screws</a>, <a href=\"handbooksearch://hopper\">hoppers</a>, <a href=\"handbooksearch://axle\">axles</a>, and <a href=\"handbooksearch://angled gear\">angled gears</a>",
+	"traitdesc-locustlover": "+50% hp to hacked locusts, and has the ability to heal hacked locusts with <a href=\"handbooksearch://metal parts\">metal parts</a>",
+	"traitdesc-tenacious": "Exclusive craftable <a href=\"handbooksearch://estoc\">Forlorn hope estoc</a>",
+	"traitdesc-pioneer": "Exclusive craftable <a href=\"handbooksearch://booster\">soil boosters</a>, <a href=\"handbooksearch://seed\">seeds</a>, and a better recipe for <a href=\"handbooksearch://terra preta\">terra preta</a>",
+	"traitdesc-carpenter": "Exclusive craftable <a href=\"handbooksearch://wagon\">wagon wheels</a>, <a href=\"handbooksearch://paper lantern\">paper lanterns</a>, <a href=\"handbooksearch://aged firewood\">aged firewood</a>, and better recipes for <a href=\"handbooksearch://stick\">sticks</a>, <a href=\"handbooksearch://firewood\">firewood</a>, and <a href=\"handbooksearch://board\">boards</a>",
+	"traitdesc-mason": "Exclusive craftable <a href=\"handbooksearch://advanced bloomery\">advanced bloomery</a>, exclusive craftable <a href=\"handbooksearch://hardened\">Hardened clay blocks</a>, cheaper <a href=\"handbooksearch://plaster (plain)\">plaster</a>, cheaper <a href=\"handbooksearch://mortar\">mortar recipe</a>, cheaper <a href=\"handbooksearch://raw blue clay brick or raw red clay brick or raw fire clay brick\">raw clay brick recipes</a>, and cheaper <a href=\"handbooksearch://unfired\">unfired refractory brick recipes</a>",
+	"traitdesc-packmule": "Exclusive craftable <a href=\"handbooksearch://peddler's pack\">peddler's pack</a>",
+	"traitdesc-specialstock": "Able to access the past week's shop inventory for every trader",
+	"traitdesc-silvertongue": "Cheaper prices for every trader",
+	"traitdesc-prospector": "Exclusive craftable <a href=\"handbooksearch://reinforced sturdy leather mining bag\">reinforced sturdy leather mining bag</a>, <a href=\"handbooksearch://toolkit\">toolkits</a>, <a href=\"handbooksearch://mining lanterns\">mining lanterns</a>, <a href=\"handbooksearch://copper pan\">copper pan</a>, cheaper <a href=\"handbooksearch://blasting powder\">blasting powder</a> recipes, and cheaper <a href=\"handbooksearch://bomb\">bomb</a> recipes",
+	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep.",
+	"traitdesc-mystic": "Exclusive craftable <a href=\"handbooksearch://crystal skull\">crystal skull</a>",
+	"traitdesc-clairvoyance": "Able to use the <a href=\"handbooksearch://crystal skull\">crystal skull</a> to find broken static translocators",
+	"traitdesc-smith": "Exclusive craftable <a href=\"handbooksearch://armor kit\">armor kits</a>, <a href=\"handbooksearch://metal barrel\">metal barrels</a> for the alchemist, <a href=\"handbooksearch://stainless steel mix\">stainless steel mix</a> to be used in the advanced bloomery, is the only one capable of interacting with the advanced bloomery",
+	"traitdesc-recycler": "Can break down <a href=\"handbooksearch://rusty gear\">rusty gears</a>, <a href=\"handbooksearch://metal scraps\">metal scraps</a>, and <a href=\"handbooksearch://metal parts\">metal parts</a> for metals of that type",
+	"traitdesc-tallowtanner": "Can recycle unused pelts into <a href=\"handbooksearch://scraped hide\">scraped hides</a>",
 
 	"charattribute-flaxSeedChance-0.25": "+25% chance to get flax seeds from grass",
 	"charattribute-flaxDropRate-0.2": "+20% more flax fibers from flax crops",
@@ -266,7 +253,7 @@
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
 	"charattribute-clayformingPoints-5": "+5 voxels for each piece of clay used in clayforming",
-	"charattribute-caveStabilityLoss--0.15": "Define me after checking that this works!",
-	"charattribute-caveStabilityLoss--1": "Define me after checking that this works!",
+	"charattribute-caveStabilityLoss--0.15": "+15% faster temporal stability loss in caves",
+	"charattribute-caveStabilityLoss--1": "Gradual temporal stability loss when outside or when not in a room",
 	"charattribute-surfaceStabilityLoss--0.25": "Define me after checking that this works!"
 }
