--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -1,5 +1,9 @@
 {
-	"item-forlorn-meteoriciron": "Meteoric Iron Estoc",
+	"item-forlorn-meteoriciron": "Meteoric Iron Estoc ",
+	"item-stainless-steel-mix": "Stainless steel mix",
+	"item-miningbag-sturdy-reinforced": "Prospector's Pack",
+	"item-primamateria": "Prima Materia",
+	"itemdesc-primamateria": "<font color=\"#99c9f9\"><i>The gear was merely a vessel. This is the truth it contained.</i></font><br>",
 	"item-forlornblade-meteoriciron": "Meteoric Iron Estoc blade",
 	"item-tools-basic": "Basic armor kit",
 	"itemdesc-tools-basic": "<font color=\"#ff0000\">Too weak to repair plate armors</font>",
@@ -10,12 +14,13 @@
 	"itemdesc-basicbooster": "Permanently increases all max soil nutrient values by 20%",
 	"item-qualitybooster": "Quality soil booster",
 	"itemdesc-qualitybooster": "Permanently increases all max soil nutrient values by 40%",
-	"item-clothes-head-farm-hat": "Farm hat",
-	"item-clothes-upperbody-lumberjack-shirt": "Lumberjack shirt",
+	"item-rosin": "Rosin",
 	"block-metalpan-copper": "Copper pan",
 	"block-metalmininglantern-*": "Mining lantern",
 	"block-primitivemininglantern-*": "Simple mining lantern",
 	"block-coppercookingpot-burned": "Copper Cooking Pot",
 	"block-copperfryingpan-burned": "Copper Frying Pan",
-	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has a increased chance to find nuggets"
+	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has a increased chance to find nuggets",
+	"block-bloomerybaseadvanced-north": "Advanced bloomery base",
+	"block-bloomerychimneyadvanced": "Advanced bloomery chimney"
 }
