major class reworks and changes

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -49,6 +49,7 @@
 	//Heavyhanded is in Vanilla's Lang!
 	"trait-culinary": "<font color=\"#84ff84\">• Culinary </font>",
 	"trait-shelflifesavant": "<font color=\"#84ff84\">• Shelf-Life Savant </font>",
+	"trait-greenshadow": "<font color=\"#84ff84\">• Greenshadow </font>",
 	"trait-butcher": "<font color=\"#84ff84\">• Butcher </font>",
 	"trait-sluggish": "<font color=\"#ff8484\">• Sluggish </font>",
 	"trait-crafty": "<font color=\"#84ff84\">• Crafty </font>",
@@ -56,10 +57,10 @@
 	"trait-technical": "<font color=\"#84ff84\">• Technical </font>",
 	"trait-stickyfingers": "<font color=\"#84ff84\">• Sticky Fingers </font>",
 	"trait-dread": "<font color=\"#ff8484\">• Dread </font>",
-	"trait-tenacious": "<font color=\"#84ff84\">• Tenacious </font>",
-	"trait-duelist": "<font color=\"#84ff84\">• Duelist </font>",
-	"trait-pragmatic": "<font color=\"#84ff84\">• Pragmatic </font>",
+	"trait-dreadslayer": "<font color=\"#84ff84\">• Dreadslayer </font>",
+	"trait-fanatic": "<font color=\"#84ff84\">• Fanatic </font>",
 	"trait-glutton": "<font color=\"#ff8484\">• Glutton </font>",
+	"trait-servosympathy": "<font color=\"#ff8484\">• Servo-Sympathy </font>",
 	"trait-careless": "<font color=\"#ff8484\">• Careless </font>",
 	"trait-pioneer": "<font color=\"#84ff84\">• Pioneer </font>",
 	"trait-claustrophobic": "<font color=\"#ff8484\">• Claustrophobic </font>",
@@ -85,8 +86,8 @@
 	"trait-mystic": "<font color=\"#84ff84\">• Mystic </font>",
 	"trait-clairvoyance": "<font color=\"#84ff84\">• Clairvoyance </font>",
 	"trait-shrewd": "<font color=\"#84ff84\">• Shrewd </font>",
-	"trait-dreadslayer": "<font color=\"#84ff84\">• Dreadslayer </font>",
-	"trait-clockworkadverse": "<font color=\"#ff8484\">• Clockwork Adverse </font>",
+	"trait-rustbane": "<font color=\"#84ff84\">• Rustbane </font>",
+	"trait-bellshocked": "<font color=\"#ff8484\">• Bellshocked </font>",
 	"trait-smith": "<font color=\"#84ff84\">• Smith </font>",
 	"trait-dragonskin": "<font color=\"#84ff84\">• Dragonskin </font>",
 	"trait-recycler": "<font color=\"#84ff84\">• Recycler </font>",
@@ -95,6 +96,7 @@
 	"trait-tallowtanner": "<font color=\"#84ff84\">• Tallow Tanner </font>",
 	"trait-unlikelyharvest": "<font color=\"#84ff84\">• Unlikely Harvest </font>",
 	"trait-fibrousfolly": "<font color=\"#84ff84\">• Fibrous Folly </font>",
+	"trait-zealot": "<font color=\"#84ff84\">• Zealot </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -116,6 +118,7 @@
 	//Heavyhanded is in Vanilla's Lang!
 	"traitname-culinary": "Culinary",
 	"traitname-shelflifesavant": "Shelf-Life Savant",
+	"traitname-greenshadow": "Greenshadow",
 	"traitname-butcher": "Butcher",
 	"traitname-sluggish": "Sluggish",
 	"traitname-tinkerer": "Tinkerer",
@@ -123,10 +126,10 @@
 	"traitname-technical": "Technical",
 	"traitname-stickyfingers": "Sticky Fingers",
 	"traitname-dread": "Dread",
-	"traitname-tenacious": "Tenacious",
-	"traitname-duelist": "Duelist",
-	"traitname-pragmatic": "Pragmatic",
+	"traitname-dreadslayer": "Dreadslayer",
+	"traitname-fanatic": "Fanatic",
 	"traitname-glutton": "Glutton",
+	"traitname-servosympathy": "Servo-Sympathy",
 	"traitname-careless": "Careless",
 	"traitname-pioneer": "Pioneer",
 	"traitname-claustrophobic": "Claustrophobic",
@@ -152,8 +155,8 @@
 	"traitname-mystic": "Mystic",
 	"traitname-clairvoyance": "Clairvoyance",
 	"traitname-shrewd": "Shrewd",
-	"traitname-dreadslayer": "Dreadslayer",
-	"traitname-clockworkadverse": "Clockwork Adverse",
+	"traitname-rustbane": "Rustbane",
+	"traitname-bellshocked": "Bellshocked",
 	"traitname-smith": "Smith",
 	"traitname-dragonskin": "Dragonskin",
 	"traitname-recycler": "Recycler",
@@ -162,15 +165,15 @@
 	"traitname-tallowtanner": "Tallow Tanner",
 	"traitname-unlikelyharvest": "Unlikely Harvest",
 	"traitname-fibrousfolly": "Fibrous Folly",
+	"traitname-zealot": "Zealot",
 
-	"traitdesc-temporaltransmutation": "Has the ability to craft <a href=\"handbooksearch://temporal gear\">temporal gears</a>, <a href=\"handbooksearch://sulfur chunk\">sulfur</a>, <a href=\"handbooksearch://saltpeter\">saltpeter</a>, and <a href=\"handbooksearch://high fertility soil\">high fertility soil</a> via exclusive <a href=\"handbooksearch://temporal transmutation\">barrel</a> recipes",
+	"traitdesc-temporaltransmutation": "Has the ability to craft <a href=\"handbooksearch://temporal gear\">temporal gears</a>, <a href=\"handbooksearch://sulfur chunk\">sulfur</a>, <a href=\"handbooksearch://saltpeter\">saltpeter</a>, and <a href=\"handbooksearch://high fertility soil\">high fertility soil</a> via exclusive <a href=\"handbooksearch://temporal transmutation\">barrel</a> recipes. Can also create <a href=\"handbooksearch://prima materia\">prima materia</a>",
 	"traitdesc-artisan": "Exclusive craftable <a href=\"handbooksearch://wallpaper\">wallpapers</a>, and can glaze <a href=\"handbooksearch://Raw storage vessel\">Raw storage vessels</a>, <a href=\"handbooksearch://Raw flowerpot\">Raw flowerpots</a>, and <a href=\"handbooksearch://Raw planter\">Raw planters</a>",
 	"traitdesc-bowyer": "Exclusive craftable <a href=\"handbooksearch://crude bow or crude arrow or recurve bow \">bows and arrows</a>, and <a href=\"handbooksearch://quiver\">a quiver</a>",
 	"traitdesc-culinary": "Exclusive craftable<a href=\"handbooksearch://vintage beef\">Vintage beef</a>, <a href=\"handbooksearch://cooking pot\">metal cooking pots</a>, and <a href=\"handbooksearch://frying pan\">metal frying pans</a>",
 	"traitdesc-shelflifesavant": "Exclusive craftable <a href=\"handbooksearch://rosin\">rosin</a> that doubles the longevity of food sealed in <a href=\"handbooksearch://fired crock\">crocks</a>",
 	"traitdesc-tinkerer": "Exclusive craftable <a href=\"handbooksearch://tuning spear\">device</a> to tame locusts, <a href=\"handbooksearch://metal parts\">metal parts</a>, better recipes for <a href=\"handbooksearch://chute\">chutes</a>, <a href=\"handbooksearch://archimedes\">archimedes screws</a>, <a href=\"handbooksearch://hopper\">hoppers</a>, <a href=\"handbooksearch://axle\">axles</a>, and <a href=\"handbooksearch://angled gear\">angled gears</a>",
 	"traitdesc-locustlover": "+50% hp to hacked locusts, and has the ability to heal hacked locusts with <a href=\"handbooksearch://metal parts\">metal parts</a>",
-	"traitdesc-tenacious": "Exclusive craftable <a href=\"handbooksearch://estoc\">Forlorn hope estoc</a>",
 	"traitdesc-pioneer": "Exclusive craftable <a href=\"handbooksearch://booster\">soil boosters</a>, <a href=\"handbooksearch://seed\">seeds</a>, and a better recipe for <a href=\"handbooksearch://terra preta\">terra preta</a>",
 	"traitdesc-carpenter": "Exclusive craftable <a href=\"handbooksearch://wagon\">wagon wheels</a>, <a href=\"handbooksearch://paper lantern\">paper lanterns</a>, <a href=\"handbooksearch://aged firewood\">aged firewood</a>, and better recipes for <a href=\"handbooksearch://stick\">sticks</a>, <a href=\"handbooksearch://firewood\">firewood</a>, and <a href=\"handbooksearch://board\">boards</a>",
 	"traitdesc-mason": "Exclusive craftable <a href=\"handbooksearch://advanced bloomery\">advanced bloomery</a>, exclusive craftable <a href=\"handbooksearch://hardened\">Hardened clay blocks</a>, cheaper <a href=\"handbooksearch://plaster (plain)\">plaster recipe</a>, cheaper <a href=\"handbooksearch://mortar\">mortar recipe</a>, cheaper <a href=\"handbooksearch://raw blue clay brick or raw red clay brick or raw fire clay brick\">raw clay brick recipes</a>, and cheaper <a href=\"handbooksearch://unfired\">unfired refractory brick recipes</a>",
@@ -179,11 +182,12 @@
 	"traitdesc-silvertongue": "Cheaper prices for every trader",
 	"traitdesc-prospector": "Exclusive craftable <a href=\"handbooksearch://prospector's pack\">prospector's pack</a>, <a href=\"handbooksearch://toolkit\">toolkits</a>, <a href=\"handbooksearch://mining lantern\">mining lanterns</a>, <a href=\"handbooksearch://copper pan\">copper pan</a>, cheaper <a href=\"handbooksearch://blasting powder\">blasting powder</a> recipes, and cheaper <a href=\"handbooksearch://bomb\">bomb</a> recipes",
 	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep.",
-	"traitdesc-mystic": "Exclusive craftable <a href=\"handbooksearch://crystal skull\">crystal skull</a>, and cheaper recipes for <a href=\"handbooksearch://parchment\">parchment</a>, and <a href=\"handbooksearch://pulp\">linen fiber pulp</a>",
+	"traitdesc-mystic": "Exclusive craftable <a href=\"handbooksearch://crystal skull\">crystal skull</a>, craftable <a href=\"handbooksearch://prima materia\">prima materia</a>, and cheaper recipes for <a href=\"handbooksearch://parchment\">parchment</a>, and <a href=\"handbooksearch://pulp\">linen fiber pulp</a>",
 	"traitdesc-clairvoyance": "Able to use the <a href=\"handbooksearch://crystal skull\">crystal skull</a> to find broken static translocators",
 	"traitdesc-smith": "Exclusive craftable <a href=\"handbooksearch://armor kit\">armor kits</a>, <a href=\"handbooksearch://metal barrel\">metal barrels</a> for the alchemist, <a href=\"handbooksearch://stainless steel mix\">stainless steel mix</a> to be used in the advanced bloomery, is the only one capable of interacting with the advanced bloomery",
 	"traitdesc-recycler": "Can break down <a href=\"handbooksearch://rusty gear\">rusty gears</a>, <a href=\"handbooksearch://metal scraps\">metal scraps</a>, and <a href=\"handbooksearch://metal parts\">metal parts</a> for metals of that type",
 	"traitdesc-tallowtanner": "Can recycle unused pelts into <a href=\"handbooksearch://scraped hide\">scraped hides</a>",
+	"traitdesc-zealot": "Exclusive craftable <a href=\"handbooksearch://temporal cloth\">Temporal cloth</a>, <a href=\"handbooksearch://forlorn hope estoc\">Forlorn Hope estoc</a>and a cheaper recipe for <a href=\"handbooksearch://prima materia\">prima materia</a>",
 
 	"charattribute-flaxSeedChance-0.25": "+25% chance to get flax seeds from grass",
 	"charattribute-flaxDropRate-0.2": "+20% more flax fibers from flax crops",
@@ -197,15 +201,15 @@
 	"charattribute-wildCropDropRate-0.25": "+25% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.5": "+50% wild crop drop rate",
 	"charattribute-wildCropDropRate--0.15": "-15% wild crop drop rate",
+	"charattribute-forageDropRate-0.2": "+20% loot from foraging",
 	"charattribute-forageDropRate-0.25": "+25% loot from foraging",
 	"charattribute-forageDropRate-0.3": "+30% loot from foraging",
+	"charattribute-forageDropRate-0.35": "+30% loot from foraging",
 	"charattribute-forageDropRate-0.5": "+50% loot from foraging",
 	"charattribute-forageDropRate--0.15": "-15% loot from foraging",
-	"charattribute-animalLootDropRate-0.2": "+20% animal loot",
 	"charattribute-animalLootDropRate-0.25": "+25% animal loot",
 	"charattribute-animalLootDropRate-0.5": "+50% animal loot",
 	"charattribute-animalLootDropRate--0.25": "-25% animal loot",
-	"charattribute-animalHarvestingTime--0.3": "+30% animal harvesting speed",
 	"charattribute-animalHarvestingTime--0.5": "+50% animal harvesting speed",
 	"charattribute-animalHarvestingTime--0.75": "+75% animal harvesting speed",
 	"charattribute-animalHarvestingTime-0.1": "-10% animal harvesting speed",
@@ -228,9 +232,9 @@
 	"charattribute-walkspeed-0.15": "+15% walk speed",
 	"charattribute-armorWalkSpeedAffectedness--0.15": "walk speed penalty for wearing armor reduced by 15%",
 	"charattribute-armorWalkSpeedAffectedness--0.2": "walk speed penalty for wearing armor reduced by 20%",
-	"charattribute-armorWalkSpeedAffectedness-0.25": "walk speed penalty for wearing armor increased by 25%",
+	"charattribute-armorWalkSpeedAffectedness-0.05": "walk speed penalty for wearing armor increased by 5%",
 	"charattribute-meleeWeaponsDamage-0.1": "+10% melee damage",
-	"charattribute-meleeWeaponsDamage-0.4": "+40% melee damage",
+	"charattribute-meleeWeaponsDamage-0.3": "+30% melee damage",
 	"charattribute-meleeWeaponsDamage--0.2": "-20% melee damage",
 	"charattribute-rangedWeaponsDamage-0.7": "+70% ranged damage",
 	"charattribute-rangedWeaponsDamage--0.2": "-20% ranged damage",
@@ -248,13 +252,16 @@
 	"charattribute-armorDurabilityLoss-0.25": "-25% armor durability",
 	"charattribute-mechanicalsDamage-0.25": "+25% damage against mechanicals",
 	"charattribute-mechanicalsDamage--0.25": "-25% damage against mechanicals",
-	"charattribute-rustedDamage-0.25": "+25% damage against rusted creatures",
+	"charattribute-mechanicalsDamage--0.2": "-20% damage against mechanicals",
+	"charattribute-rustedDamage-0.15": "+15% damage against rusted creatures",
+	"charattribute-rustedDamage-0.35": "+35% damage against rusted creatures",
 	"charattribute-rustedDamage--0.1": "-10% damage against rusted creatures",
 	"charattribute-fireDamage--0.5": "-50% damage from fire",
 	"charattribute-rustyGearDropRate-1": "+100% rusty gear drop rate",
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
 	"charattribute-clayformingPoints-5": "+5 voxels for each piece of clay used in clayforming",
-	"charattribute-caveStabilityLoss-0.1": "lose 10% more temporal stability when underground",
-	"charattribute-surfaceStabilityLoss--0.008": "slowly lose temporal stability when on the surface"
+	"charattribute-caveStabilityLoss--0.15": "+15% faster temporal stability loss in caves",
+	"charattribute-caveStabilityLoss--1": "Gradual temporal stability loss when outside or when not in a room",
+	"charattribute-surfaceStabilityLoss--0.25": "Define me after checking that this works!"
 }
