--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -15,6 +15,9 @@
 	"item-qualitybooster": "Quality soil booster",
 	"itemdesc-qualitybooster": "Permanently increases all max soil nutrient values by 40%",
 	"item-rosin": "Rosin",
+	"item-cloth-forlorn": "Temporal cloth",
+	"item-gem-temporal": "Temporal Gem",
+	"item-forlornhilt": "Forlorn Hope Hilt",
 	"block-metalpan-copper": "Copper pan",
 	"block-metalmininglantern-*": "Mining lantern",
 	"block-primitivemininglantern-*": "Simple mining lantern",
