Wearable Light Patch is in and the Mining Pack works fine! Just add that similar LightHSV line to any backpack to make it function on any of them. Also got Toolkits a proper item, functionality to come later.

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -1,7 +1,7 @@
 {
 	"item-forlorn-meteoriciron": "Meteoric Iron Estoc",
 	"item-stainless-steel-mix": "Stainless steel mix",
-	"item-miningbag-sturdy-reinforced": "Prospector's Pack",
+	"item-miningbagsturdyreinforced": "Prospector's Pack",
 	"item-primamateria": "Prima Materia",
 	"itemdesc-primamateria": "<font color=\"#99c9f9\"><i>The gear was merely a vessel. This is the truth it contained.</i></font><br>",
 	"item-forlornblade-meteoriciron": "Meteoric Iron Estoc blade",
@@ -10,6 +10,10 @@
 	"item-tools-simple": "Simple armor kit",
 	"item-tools-standard": "Standard armor kit",
 	"item-tools-advanced": "Advanced armor kit",
+	"item-toolkit-basic": "Basic tool kit",
+	"item-toolkit-simple": "Simple tool kit",
+	"item-toolkit-standard": "Standard tool kit",
+	"item-toolkit-advanced": "Advanced tool kit",
 	"item-basicbooster": "Basic soil booster",
 	"itemdesc-basicbooster": "Permanently increases all max soil nutrient values by 20%",
 	"item-qualitybooster": "Quality soil booster",
