Quick push to include the backpack and lang tweaks, Silver Tongue patch is basically a stub for now and does nothing yet! Working on that.

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -2,6 +2,7 @@
 	"item-forlorn-meteoriciron": "Meteoric Iron Estoc",
 	"item-stainless-steel-mix": "Stainless steel mix",
 	"item-miningbagsturdyreinforced": "Prospector's Pack",
+	"item-merchantsbackpack": "Merchant's Pack",
 	"item-primamateria": "Prima Materia",
 	"item-forlornblade-meteoriciron": "Meteoric Iron Estoc blade",
 	"item-tools-basic": "Basic armor kit",
