not done yet but updating it just in case

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -34,12 +34,30 @@
 	"block-metalpan-copper": "Copper pan",
 	"block-metalmininglantern-*": "Mining lantern",
 	"block-primitivemininglantern-*": "Simple mining lantern",
-	"block-coppercookingpot-burned": "Copper Cooking Pot",
-	"block-copperfryingpan-burned": "Copper Frying Pan",
+	"block-metalcookingpot-copper-empty": "Copper Cooking Pot",
+	"block-metalcookingpot-tinbronze-empty": "Tin Bronze Cooking Pot",
+	"block-metalcookingpot-blackbronze-empty": "Black Bronze Cooking Pot",
+	"block-metalcookingpot-iron-empty": "Iron Cooking Pot",
+	"block-metalcookingpot-meteoriciron-empty": "Meteoric Iron Cooking Pot",
+	"block-metalcookingpot-gold-empty": "Gold Cooking Pot",
+	"block-metalcookingpot-silver-empty": "Silver Cooking Pot",
+	"block-metalcookingpot-electrum-empty": "Electrum Cooking Pot",
+	"block-metalcookingpot-steel-empty": "Steel Cooking Pot",
+	"block-metalcookingpot-stainlesssteel-empty": "Stainless Steel Cooking Pot",
 	"block-bloomerybaseadvanced-north": "Advanced bloomery base",
 	"block-bloomerychimneyadvanced": "Advanced bloomery chimney",
 	
-	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has a increased chance to find nuggets",
+	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has an increased chance to find nuggets",
+	"blockdesc-metalcookingpot-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
+	"blockdesc-metalcookingpot-tinbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
+	"blockdesc-metalcookingpot-blackbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 9 servings</i></font>",
+	"blockdesc-metalcookingpot-iron-empty": "<font color=\"#99c9f9\"><i>Can hold 10 servings</i></font>",
+	"blockdesc-metalcookingpot-meteoriciron-empty": "<font color=\"#99c9f9\"><i>Can hold 11 servings</i></font>",
+	"blockdesc-metalcookingpot-gold-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalcookingpot-silver-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalcookingpot-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalcookingpot-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
+	"blockdesc-metalcookingpot-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
 	
 	"block-rawdecovessel-harvest": "Raw storage vessel (Harvest)",
     "block-rawdecovessel-honeydew": "Raw storage vessel (Honeydew)",
